@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.43-1lsb3.2.i486.rpm 3159861 BLAKE2B bd03ea6081f654bb2a30c7906f45412d2f022d339e37dc1b3983fb57d9ef386ae66f7d04bd099ade86bf0996dd9c1a8d8eb171ab1d32ac90473fc5fd898f22c9 SHA512 5e1dff186a5b7134a2611808ec80fef9465f85454c14b6329a38f4e17a26476170245d18d23816117d6e24f88301b8ec4f8797d8a0981a8a7050de590642f70a
-DIST epson-inkjet-printer-escpr2-1.1.43-1lsb3.2.x86_64.rpm 3159385 BLAKE2B 65e7ad831572ed11b408f8c2d2fc730620c10156503b0c0815ee1df52a8bb4acdcd9a30956d0b4762fb957d68f56e97cfee97a335c0fa7714dceda998f065d75 SHA512 4bdafdb77f8f3eb1e6cd9a5a34bb25cc8f8003f720bfe9d5bf232003b8d1ac07d1eb8465768f58b0ca9cbf1794f35558a20297dbcabcda70b0801a10705e8324
 DIST epson-inkjet-printer-escpr2-1.1.44-1lsb3.2.i486.rpm 3167531 BLAKE2B 3e5d630389312ac89433fb4b5f38e93691841b92cc9caf8cbee0a350ee709b2e5bafa508bc3d235c693b153474a93b5688c3e907e7f34581830bd46f0bf84bba SHA512 ecdbdf2a5f1a2539802a55c24dfba31bb5d36844a9860c27ab6f67f5c727df4e0f3de6a7649a0971c3cb66ea69b0d5cb9ad24910d1318866d83d1cb8e44832ad
 DIST epson-inkjet-printer-escpr2-1.1.44-1lsb3.2.x86_64.rpm 3166881 BLAKE2B 1c23899bbcfa3d111572351295a15be197ffc13cbee76735aec19dc4e280a0db51595ad94334e08a39de37aa89e1b433d98e119a19e18261f756605749d58dec SHA512 0e132ebff9bef91698d0a185ccd241c4d4117f03d89e1bb4b680575d1bb89d782c719140fa39f6d73316a9c7b6125b1c72d653ddfe71c8153ed58f85a49ec5b5
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.43.ebuild 1670 BLAKE2B dbfa7fd72cbb83034962b51c66e1040c95e7772fddfbd4b0166801399c6847da867d1e1fd6daf53ad9040ce4664ba088bac888ef15b5bdf5b99fe155ecb1f541 SHA512 df066bffef2564e8a0bcdb907eb7b33800cd2bfdcdca0c3be983ccd20d7c63944b17a4a823e257b2d07d4431e9c1739cf8f696dee8872f0792203551e14694e0
+DIST epson-inkjet-printer-escpr2-1.1.45-1lsb3.2.i486.rpm 3188341 BLAKE2B 4b74149c06da3c72c799aa5774a004cb7482a869f71a45a023dd9dc7b11eb037c8d57159cd12a119a57fb8788427c8a05b24be662b3be2b7de36a0d9d89a5a12 SHA512 e9197dc14d855150ee6eb29e750b66bf2efe30878d7e1e5e4ba9aac02e095491307fb8dafc161d56e11311f742072d5b7ca5b946ddb43ef5da76dc86920f47d1
+DIST epson-inkjet-printer-escpr2-1.1.45-1lsb3.2.x86_64.rpm 3187642 BLAKE2B 3d738c5d0f022139509f2883d78deb7d939e8cd4cc3168c1e312a58ff3229a7631adac0ea2136412d5a16abd50a7fd4ecff448f979ef56e6c3dc51eb82b99377 SHA512 279abffea921e68c2548ac41bdf578df4f84529c5d3c39ab0d680e2c8b879e89ed73a62ade5d1386dba092edbb83368e7ebdd3ba7beca8b985257497d7bbda35
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.44.ebuild 1670 BLAKE2B bfd10614c8990f315b1c0a2ac1e1ae187141cb944b8387f007bfd7993deea91bd8c5e3753d51b89fd7de193db67c550e6156ec500970c19de7ebd3fb24c8884f SHA512 0c86220735e9c744dcc91125a4c4b256769fd5371e35892d3e66ce7e2f1c2a3370b13ece75150d5ed01fab220f5f01582d471924784396a3c6e7f1bebcf102f6
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.45.ebuild 1670 BLAKE2B 99d28ed3bd22af74b74e414d6c6775be07233bd8a415c90e883c7115d35278a17066586d84193200e5d6df5f5d3971dbccca5fd4f0a460c0805b7f9c591930d6 SHA512 557ace1c41f23dbafa41aa9744584ea98acece07650b9ff3875e8022f7af130938defa4753433fb7b0c1d413090245d055b2eba7c5467a530cc986fde9892fd0
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
