@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.43.tar.gz 4432118 BLAKE2B 074fac7ea38df6f640cc2578aa2d4a510c5a23e727d131fc95e4730af4f89d6b7b74d01e25d5bb92fb85853cc017f2ba4a01ff6c07bf01876de61bf62173ac48 SHA512 2e4482624cb63cbb22be947b8738a62bedec5f47bc1b68c65249c8a579168d9e907848b6529952a760919cab2711c10882c13a9241e432b129c9ea46f2964786
 DIST epson-inkjet-printer-escpr2-1.1.44.tar.gz 4454545 BLAKE2B ac8057c3492da380da7e2afbe7aa0ac489fdb1050eb752f796b8c3f5f6467c07dca702db571cefffe9d36bcf8ced92da452f436f11fb5e2f0bb3f87d99d3217d SHA512 ade9cfe7f37896b7f33b2ff4128a1dcadb2af7d568a4ac42a1624d49f3873a6f7462675d87fee91bfe9e772d76c23e00d4f6708d83930c243963bd6048683a16
-EBUILD epson-inkjet-printer-escpr2-1.1.43.ebuild 1319 BLAKE2B a015a5e288db8d7a28e761d8f98814b85de96f2f1c07ccef06d887ead99d3da8571c2feb0d9361046824ce651172ccf80b8d489d6df0d58985e09e2a39db686e SHA512 1f6f76336cc0c25e23b9162c5ec2e7f8c4e2505ce48a4b99912fcd47f7b716a92396f7a3c8881a32d93c600bb817cb4bf5f64b72c0b2d4a276951dbc45eb4c6f
+DIST epson-inkjet-printer-escpr2-1.1.45.tar.gz 4476994 BLAKE2B 84bdafe750402dc4315bd35c31c46c5f8c922dea534f25be32319a18d9f4c7343262cf283ea382a99f3a499fe24efce63ceb82bc7a28d6f5abcd645320c1301d SHA512 f1fe7056e811c0943e8f960fdf0283df7501ed712cf5020d609be9b371681fd46d067e1793a311f337e63fdc0090ce659644ae92bcba6ac617746919fb1f7c87
 EBUILD epson-inkjet-printer-escpr2-1.1.44.ebuild 1319 BLAKE2B db900df0507b6bcc5fd7a13f01158976661598656c47e330813a849d14f533289b1bfddfe5daa83f884623806d2792ab702a947cdbee4e49ff92479427b5533f SHA512 de1ebadd223593bbfc32ccd47643e0d6f9cdc24d3e8cfd676ea5853c7f7ab78328b4623a63bc2992b2f92f588dedbd25eda9b12295440667a8ced6bfb86999a9
+EBUILD epson-inkjet-printer-escpr2-1.1.45.ebuild 1319 BLAKE2B 44564ccbaa2206b95fb8007b5c38b4e02e11eada3d2d2d5c573f9186b68dc16825403e2e28b179e99568d16fc2b23b2ab351c4c61219190e404ad2b475da7a34 SHA512 c92a8ad3fb839960db4ffe5fad12c1f983625f1d3cd849eb994bec485d207d7fb541b3002a69a070a52e09e5a7936d97985d2c6e305ce558f3c7847ad32ee704
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
